Added creation of a new document version when updating a document